--- a/styles.css
+++ b/styles.css
@@ -616,4 +616,4 @@ button[type=submit] {
   font: "Poppins", sans-serif;
 }
 
-/*# sourceMappingURL=style.css.map */
+/*# sourceMappingURL=styles.css.map */
