--- a/styles.scss
+++ b/styles.scss
@@ -125,7 +125,7 @@ $primary-text-size: 18px;
   justify-content: center;
   background: $secondary-color;
   height: 100%;
-  margin-top: 20px;
+  margin-top: 50px;
 }
 
 .form-content {
@@ -298,11 +298,11 @@ body, html {
     width: 100%;
   }
 
-  p {
-    color: #444246;
-    font-size: 35px;
-    /*margin-bottom: 16px;*/
-  }
+  //p {
+  //  color: #444246;
+  //  font-size: $primary-text-size;
+  //  /*margin-bottom: 16px;*/
+  //}
 
   ul {
     list-style-type: none;
@@ -510,6 +510,7 @@ body, html {
 /* ABOUT */
 
 .simple-text {
+  color: $text-color;
   font-size: $primary-text-size;
 }
 
@@ -588,7 +589,40 @@ body, html {
 
 /* MENU */
 
+.intro-text {
+  max-width: 600px;
+  margin: 50px auto 50px auto;
+  text-align: center;
+}
 
+.menu-member .content {
+  padding: 20px;
+  text-align: center;
+}
+
+.menu-container {
+  width: 100%;
+  max-width: 1980px;
+  margin: 0 auto;
+  padding-left: 24px;
+  padding-right: 24px;
+}
+
+.menu-description {
+  font-size: $primary-text-size;
+  color: $text-color;
+}
+
+.hover-effect {
+  transition: all 0.4s ease;
+  border-bottom: 3px solid transparent;
+}
+
+.hover-effect:hover {
+  transform: translateY(-5px);
+  box-shadow: 0 4px 20px rgba(0,0,0,0.2);
+  border-bottom-color: $primary-color;
+}
 
 /* LOGIN */   /* REGISTRATION */
 
@@ -615,5 +649,47 @@ body, html {
 }
 
 /* PROFILE */
+
+.profile-card {
+  margin-top: 120px;
+  margin-left: 100px;
+  font-size: 28px;
+  padding: 0 10px;
+  width: 58%;
+}
+
+.profile-card h2 {
+  color: #8357E8;
+  font-family: "Poppins", sans-serif;
+  font-size: 24px;
+  margin-left: 10px;
+  margin-bottom: 10px;
+}
+
+.profile-card .card {
+  background: linear-gradient(#8357E8, #c5b6e8);
+  border-radius: 18px;
+  box-shadow: 1px 1px 8px 0 grey;
+  height: auto;
+  margin-bottom: 20px;
+  padding: 20px 0 20px 50px;
+}
+
+.profile-card .card table {
+  border: none;
+  font-size: 16px;
+  height: 270px;
+  width: 80%;
+}
+
+.edit {
+  position: absolute;
+  color: #FDFFEF;
+  right: 14%;
+}
+
+tr {
+  color: #FDFFEF;
+}
 
 /* Global styles */
