--- a/styles.css
+++ b/styles.css
@@ -97,14 +97,6 @@ a:hover {
   color: #FDFFEF;
 }
 
-a:-webkit-any-link {
-  color: #484848;
-}
-
-a:-webkit-any-link:hover {
-  color: #8357E8;
-}
-
 img {
   width: 100%;
 }
@@ -1398,6 +1390,14 @@ form .button input:hover {
   font-size: 17px;
   font-weight: 400;
   color: #484848 !important;
+}
+
+.sales-boxes a:-webkit-any-link {
+  color: #484848;
+}
+
+.sales-boxes a:-webkit-any-link:hover {
+  color: #8357E8;
 }
 
 /* Global styles */
