--- a/styles.scss
+++ b/styles.scss
@@ -193,6 +193,16 @@ img {
   margin-bottom: 10px;
 }
 
+.ingredient-btn {
+  margin-right: 200px;
+}
+
+@media(max-width: 584px){
+  .ingredient-btn {
+    margin-right: 100px;
+  }
+}
+
 .no-border {
   border: none;
 }
@@ -1375,7 +1385,7 @@ form input[type="radio"]{
 }
 form .button{
   height: 45px;
-  margin: 35px 0
+  margin: 35px 0;
 }
 form .button input{
   height: 100%;
@@ -1394,6 +1404,33 @@ form .button input:hover{
   /* transform: scale(0.99); */
   background: linear-gradient($primary-color, $gradient-color);
 }
+.title-2 {
+  font-size: 20px !important;
+  font-weight: 300;
+  position: relative;
+  margin-right: 400px;
+}
+
+.title-2::before{
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  height: 3px;
+  width: 30px;
+  border-radius: 5px;
+  background: linear-gradient(135deg, $primary-color, $gradient-color);
+}
+
+.ingredient .input-box {
+  height: 100%;
+  width: calc(100% - 15px) !important;
+  //width: 100% !important;
+  margin-left: 0;
+  padding-left: 0;
+  margin-right: 150px !important;
+}
+
 @media(max-width: 584px){
   .form-container {
     max-width: 100%;
@@ -1412,6 +1449,10 @@ form .button input:hover{
   .user-details::-webkit-scrollbar{
     width: 5px;
   }
+  .ingredient .input-box {
+    width: 100% !important;
+    margin-right: 10px !important;
+  }
 }
 @media(max-width: 459px){
   .form-container .content .category{
@@ -1421,7 +1462,13 @@ form .button input:hover{
 
 /* Add menu item */
 .upload-photo {
-  margin-right: 50px;
+  margin-right: 200px;
+}
+
+@media(max-width: 584px){
+  .upload-photo {
+    margin-right: 100px;
+  }
 }
 
 .new-line {
@@ -1429,7 +1476,7 @@ form .button input:hover{
 }
 
 .upload-photo {
-  margin-left: 14px;
+  margin-left: 10px;
 }
 
 /* User listing */
